parser/tests/cases/snapshots/cases__parse_ast__pragma1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(pragma1), module::parse_pragma, \"pragma 0.1.0\")"

---
Node(
  kind: Pragma(
    version_requirement: Node(
      kind: "0.1.0",
      span: Span(
        start: 7,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
