parser/tests/cases/snapshots/cases__parse_ast__stmt_assert_no_msg.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_assert_no_msg), functions::parse_stmt,\n           \"assert x == y\")"

---
Node(
  kind: Assert(
    test: Node(
      kind: CompOperation(
        left: Node(
          kind: Name("x"),
          span: Span(
            start: 7,
            end: 8,
          ),
        ),
        op: Node(
          kind: Eq,
          span: Span(
            start: 9,
            end: 11,
          ),
        ),
        right: Node(
          kind: Name("y"),
          span: Span(
            start: 12,
            end: 13,
          ),
        ),
      ),
      span: Span(
        start: 7,
        end: 13,
      ),
    ),
    msg: None,
  ),
  span: Span(
    start: 0,
    end: 13,
  ),
)
